--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "callback": "^0.0.1",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
