--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "callback": "^0.0.1",
+    "cookies": "^0.8.0",
+    "dotenv": "^10.0.0",
+    "js-cookie": "^3.0.1",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
