--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "prettier": "2.5.1",
     "react-router": "^5.2.1",
     "sass": "^1.45.0"
   },
