--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "callback": "^0.0.1",
     "dotenv": "^10.0.0",
+    "lorem-ipsum": "^2.0.4",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
@@ -19,6 +20,7 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.2",
+    "react-lorem-ipsum": "^1.4.10",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
