--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
+    "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.3",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
