--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-lorem-ipsum": "^1.4.10",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.3.2",
     "react-transition-group": "^4.4.2",
     "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.3",
