--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "login",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://app.herokuapp.com/",
+  "homepage": "https://webol-front.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -17,13 +17,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.2",
     "react-lorem-ipsum": "^1.4.10",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
-    "react-select": "^5.3.2",
     "react-transition-group": "^4.4.2",
     "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.3",
